--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -73,7 +73,7 @@
 
 					<!-- Logo Block -->
 					<div class="col-md-4 col-sm-4 col-xs-12 logo-block">
-						<a href="index.html" title="Logo">
+						<a href="{% url 'main:index' %}">
 							<img src="{% static 'images/logo.png' %}" alt="logo" width="46" height="41"/>
 							<h3>New School</h3>
 						</a>
@@ -110,24 +110,23 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a title="Logo" href="#" class="navbar-brand"><img src="{% static 'images/logo.png' %}" alt="logo"/><span>Mitri Events</span></a>
+							<a href="{% url 'main:index' %}" class="navbar-brand"><img src="{% static 'images/logo.png' %}" alt="logo"/><span>Courses</span></a>
 						</div>
 						<div class="navbar-collapse collapse" id="navbar">
 							<ul class="nav navbar-nav menubar">
-								<li class="active"><a href="index.html">Home</a></li>
+								<li class="{% if request.resolver_match.view_name == 'main:index'%}active
+								           {% else %}{% endif %}">
+                                    <a href="{% url 'main:index' %}">Home</a></li>
 								<!--<li><a title="About Us" href="about-page.html">About Us</a></li>-->
 								<!--<li><a title="Services" href="services-page.html">Services</a></li>-->
-								<li class="dropdown">
-									<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" href="#">Courses</a>
+								<li class="{% if request.resolver_match.view_name == 'main:language_courses'%}active dropdown
+								           {% else %}dropdown{% endif %}">
+									<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" href="#">Language courses</a>
 									<i class="ddl-switch fa fa-angle-down"></i>
 									<ul class="dropdown-menu">
-										<li><a href="courses_page.html">Language courses</a></li>
-										<!--eventlist-page.html-->
-										<li><a title="Event List" href="">Event List</a></li>
-										<!--eventsingle-page.html-->
-										<li><a title="Event Single" href="#">Event Single</a></li>
-										<!--"404.html"-->
-										<li><a title="404" href='#'>404</a></li>
+                                        {% for language in languages %}
+										    <li><a href="{% url 'main:language_courses' language.pk  %}">{{language.name}}</a></li>
+                                        {% endfor %}
 									</ul>
 								</li>
 								<li class="dropdown">
@@ -161,10 +160,10 @@
             <div class="footer-about">
                 <div class="logo-block">
                     <img src="{% static 'images/logo.png' %}" alt="logo" width="70" height="63"/>
-                    <h3>Mitri Events</h3>
+                    <h3>NewSchool</h3>
                 </div>
                 <div class="footer-about-content">
-                    <h3 class="block-title">About Mitri Events conference</h3>
+                    <h3 class="block-title">About NewSchool</h3>
                     <p>Feels so right it cant be wrong. Rockin' and rollin' all week long. And when the odds are against him and their dangers work to do. You bet your life Speed Racer he will see it through. Boy the way Glen Miller played. Songs that made the hit parade. Guys like us we had it made. Those were the days.</p>
                 </div>
             </div><!-- Footer About /- -->
