--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -119,7 +119,7 @@
                                     <a href="{% url 'main:index' %}">Home</a></li>
 								<!--<li><a title="About Us" href="about-page.html">About Us</a></li>-->
 								<!--<li><a title="Services" href="services-page.html">Services</a></li>-->
-								<li class="{% if request.resolver_match.view_name == 'main:language_courses'%}active dropdown
+								<li class="{% if request.resolver_match.view_name == 'main:language_courses' or request.resolver_match.view_name == 'main:language_course'%}active dropdown
 								           {% else %}dropdown{% endif %}">
 									<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" href="#">Language courses</a>
 									<i class="ddl-switch fa fa-angle-down"></i>
