Added teachers list, added media

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -130,17 +130,17 @@
 									</ul>
 								</li>
 								<li class="dropdown">
-									<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" title="Blog" href="#">Latest News</a>
+									<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" href="{% url 'main:teachers' %}">Teachers</a>
+								</li>
+                                <li class="dropdown">
+									<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" href="#">Latest News</a>
 									<i class="ddl-switch fa fa-angle-down"></i>
 									<ul class="dropdown-menu">
-										<!--blog-page.html-->
 										<li><a title="Blog" href="#">Blog</a></li>
-										<!--blogpost-page.html-->
 										<li><a title="Blog Post" href="#">Blog Post</a></li>
 									</ul>
 								</li>
-								<!--contactus.html-->
-								<li><a title="Contact" href="#">Contact Us</a></li>
+								<li><a href="#">Contact Us</a></li>
 							</ul>
 						</div>
 					</nav><!-- Navigation /- -->
