--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -75,8 +75,7 @@
 											<span>{{lang_course.course.start_date|date:"d.M"}} - {{lang_course.course.finish_date|date:"d.M"}}, {{lang_course.course.start_date.time|time:"g:i a"}} - {{lang_course.course.finish_date|time:"g:i a"}}</span>
 									    </div>
 										<div class="post-location">
-											<span>{{lang_course.course.address.country}},
-											{{lang_course.course.address.street}}</span>
+											<span>{{lang_course.course.address}}</span>
 										</div>
 									</div>
 								</div>
