--- a/mainapp/templates/mainapp/language_course_single.html
+++ b/mainapp/templates/mainapp/language_course_single.html
@@ -20,7 +20,7 @@
 		<div class="section-padding"></div>
 	</div><!-- PageBanner /- -->
 	
-	<!-- Event List -->
+	<!-- Course -->
 	<div class="container-fluid eventsingle eventlist upcoming-event latest-blog our-history no-padding">
 		<div class="section-padding"></div>
 		<div class="container">
@@ -61,12 +61,6 @@
 										<span>{{lang_course.course.address}}</span>
 									</div>
 								</div>
-								<ul>
-									<li class="fb"><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li class="twt"><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li class="lnk"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li class="gp"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								</ul>								
 							</div>
 							<div class="entry-content">
 								<p>{{lang_course.course.description}}</p>
@@ -135,5 +129,5 @@
 			</div>
 		</div>
 		<div class="section-padding"></div>
-	</div><!-- Event List /- -->
+	</div>
 {% endblock %}
