--- a/mainapp/templates/mainapp/language_course_single.html
+++ b/mainapp/templates/mainapp/language_course_single.html
@@ -43,6 +43,8 @@
 									<div class="post-time">
 										<span class="icon icon-Notes"></span>
 										<span>{{lang_course.course.start_date|date:"d N Y"}} - {{lang_course.course.finish_date|date:"d N Y"}}</span>
+									</div>
+									<div class="post-time">
 										<span class="icon icon-Time"></span>
 										<span>{{lang_course.course.start_date.time|time:"g:i a"}} - {{lang_course.course.finish_date|time:"g:i a"}}</span>
 									</div>
@@ -51,10 +53,11 @@
 										<span>Level - {{lang_course.level_letter}}{{lang_course.level_number}}</span>
 									</div>
 									<div class="post-location">
-											<span class="icon icon-User"></span>
-											<span>Teacher - {% for teacher in lang_course.course.teacher.all %}
-												<a href="{% url 'main:index' %}">{{teacher}}</a>{% endfor %}
-											</span>
+										<span class="icon icon-User"></span>
+										<span>
+											Teacher - {% for teacher in lang_course.course.teacher.all %}
+											<a href="{% url 'main:teacher' teacher.pk %}">{{teacher}}</a>{% endfor %}
+										</span>
 									</div>
 									<div class="post-location">
 										<span class="icon icon-Pointer"></span>
