--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="{% static 'fonts/material-icon/css/material-design-iconic-font.min.css' %}">
 
         <!-- Main css -->
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/register.css' %}">
     </head>
 {% endblock %}
 
