--- a/authapp/templates/authapp/verification.html
+++ b/authapp/templates/authapp/verification.html
@@ -1,5 +1,21 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'authapp/base.html' %}
 {% load static %}
 {% block content %}
-    <h4 >Congratulations! You are registered.</h4>
+        <section class="signup">
+            <div class="container">
+                <div class="signup-content">
+                    <div class="signup-form">
+                        <h2 class="form-title">Sign up</h2>
+                        <div>You are successfully registered.</div>
+                        <div class="form-group form-button">
+                            <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
+                        </div>
+
+                    </div>
+                    <div class="signup-image">
+                        <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
+                    </div>
+                </div>
+            </div>
+        </section>
 {% endblock %}
