--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -1,4 +1,4 @@
-{% extents 'authapp/base.html' %}
+{% extends 'authapp/base.html' %}
 {% load static %}
 {% block content %}
 <!-- Sing in  Form -->
@@ -7,25 +7,25 @@
                 <div class="signin-content">
                     <div class="signin-image">
                         <figure><img src="{% static 'images/signin-image.jpg' %}" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">Create an account</a>
+                        <a href="{% url 'auth:register' %}" class="signup-image-link">Create an account</a>
                     </div>
 
                     <div class="signin-form">
-                        <h2 class="form-title">Sign up</h2>
+                        <h2 class="form-title">Sign in</h2>
+
+                                {% if login_form.errors %}
+                                    <p class="error_message">Wrong email or password.</p>
+                                {% endif %}
+
                         <form method="POST" class="register-form" id="login-form">
-                            <div class="form-group">
-                                <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="your_name" id="your_name" placeholder="Your Name"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Password"/>
-                            </div>
-                            <div class="form-group">
-                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
-                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
-                            </div>
-                            <div class="form-group form-button">
+                            {% csrf_token %}
+                            {% for field in login_form %}
+                                <div class="form-group">
+                                    <label for="{{ field.id_for_label }}"><i id="{{ field.id_for_label }}_icon" class="zmdi"></i></label>
+                                    {{ field }}
+                                </div>
+                            {% endfor%}
+                             <div class="form-group form-button">
                                 <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                             </div>
                         </form>
