--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -7,13 +7,20 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">Sign up</h2>
+
                         <form method="POST" class="register-form" id="register-form">
                             {% csrf_token %}
                             {% for field in register_form %}
-                            <div class="form-group">
-                                <label for="{{ field.id_for_label }}"><i id="{{ field.id_for_label }}_icon" class="zmdi"></i></label>
-                                {{ field }}
-                            </div>
+
+                                {% for error in field.errors %}
+                                    <p class="error_message">{{ error }}</p>
+                                {% endfor %}
+
+                                <div class="form-group">
+                                    <label for="{{ field.id_for_label }}"><i id="{{ field.id_for_label }}_icon" class="zmdi"></i></label>
+                                    {{ field }}
+                                </div>
+
                             {% endfor %}
                             <div class="form-group form-button">
                                 <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
@@ -22,7 +29,7 @@
                     </div>
                     <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">I am already member</a>
+                        <a href="{% url 'auth:login' %}" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
             </div>
