--- a/static/css/register.css
+++ b/static/css/register.css
@@ -323,6 +323,11 @@ figure {
   .form-group:last-child {
     margin-bottom: 0px; }
 
+.error_message{
+  color: red;
+  font-size: 10px;
+}
+
 input {
   width: 100%;
   display: block;
