--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -70,10 +70,15 @@
 						</ul>
 					</div><!-- Social /- -->
 
-					<!-- Register -->
+                    {% if user.is_authenticated %}
+                    <div class="col-md-4 col-sm-4 col-xs-6 register">
+						<a href="{% url 'auth:logout' %}">Logout</a>
+					</div>
+                    {% else %}
 					<div class="col-md-4 col-sm-4 col-xs-6 register">
-						<a href="{% url 'auth:register' %}" title="Register">Register</a>
-					</div><!-- Register /- -->
+						<a href="{% url 'auth:login' %}">Login</a>
+					</div>
+                    {% endif %}
 
 					<!-- Logo Block -->
 					<div class="col-md-4 col-sm-4 col-xs-12 logo-block">
@@ -91,7 +96,7 @@
 			<!-- Container -->
 			<div class="container">
 				<!-- User -->
-				<a href="#" class="user" title="User">
+				<a href="#" class="user">
 					<i class="fa fa-user"></i>
 				</a><!-- User /- -->
 				<!-- Expanding Search -->
@@ -255,10 +260,6 @@
                     <div class="navbar-collapse collapse" id="navbar2">
                         <ul class="nav navbar-nav">
                             <li><a title="Home" href="index.html">Home</a></li>
-                            <!--<li><a title="About Us" href="about-page.html">About Us</a></li>-->
-                            <!--<li><a title="Services" href="services-page.html">Services</a></li>-->
-                            <!--<li><a title="Latest News" href="blog-page.html">Latest News</a></li>-->
-                            <!--<li><a title="Contact Us" href="contactus.html">Contact Us</a></li>-->
                         </ul>
                     </div>
                 </nav><!-- Navigation /- -->
