--- a/authapp/templates/authapp/verification.html
+++ b/authapp/templates/authapp/verification.html
@@ -9,17 +9,25 @@
                         {% if request.resolver_match.url_name == 'verify' %}
                             {% if user.is_authenticated %}
                                 <div>Congratulations! You are successfully registered and login.</div>
+                                <div class="form-group form-button">
+                                    <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
+                                    <a href="{% url 'auth:profile' %}" class="form-submit rm_underline">Edit profile</a>
+                                </div>
                             {% else %}
                                 <div>Something went wrong. Repeat one more time.</div>
+                                <div class="form-group form-button">
+                                    <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
+                                </div>
                             {% endif %}
                         {% else %}
                             <div>A message has been sent to you.
                                 Follow the link in the message for further registration.</div>
+                                <div class="form-group form-button">
+                                    <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
+                                </div>
                         {% endif %}
 
-                        <div class="form-group form-button">
-                            <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
-                        </div>
+
                     </div>
                     <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
