--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -76,7 +76,7 @@
 					</div>
                     {% else %}
 					<div class="col-md-4 col-sm-4 col-xs-6 register">
-						<a href="{% url 'auth:login' %}">Login</a>
+						<a href="{% url 'auth:login' %}?next={{ request.path }}">Login</a>
 					</div>
                     {% endif %}
 
@@ -96,9 +96,16 @@
 			<!-- Container -->
 			<div class="container">
 				<!-- User -->
-				<a href="#" class="user">
-					<i class="fa fa-user"></i>
-				</a><!-- User /- -->
+                {% if user.is_authenticated %}
+                    <a href="{% url 'auth:profile' %}" class="user">
+                        <i class="fa fa-user"></i>
+                    </a>
+                {% else %}
+                    <a href="{% url 'auth:login' %}?next={{ request.path }}" class="user">
+                        <i class="fa fa-user"></i>
+                    </a>
+                {% endif %}
+                 <!--User /- -->
 				<!-- Expanding Search -->
 				<div class="menu-search">
 					<div id="sb-search" class="sb-search">
