--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -33,6 +33,7 @@
                              <div class="form-group form-button">
                                 <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                             </div>
+
                         </form>
                         <div class="social-login">
                             <span class="social-label">Or login with</span>
@@ -42,6 +43,7 @@
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
                             </ul>
                         </div>
+                        <div><a href="#" class="forgot-password-link">Forgot password</a></div>
                     </div>
                 </div>
             </div>
