--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -10,6 +10,11 @@
 
                         <form method="POST" class="register-form" id="register-form">
                             {% csrf_token %}
+
+                            {% if next %}
+                                <input type="hidden" name="next" value="{{ next }}">
+                            {% endif %}
+
                             {% for field in user_form %}
 
                                 {% for error in field.errors %}
@@ -43,6 +48,7 @@
                     </div>
                      <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
+                         <a href="{% url 'auth:password_change' %}" class="signup-image-link">Change password</a>
                      </div>
                 </div>
             </div>
