--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -43,7 +43,7 @@
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
                             </ul>
                         </div>
-                        <div><a href="#" class="forgot-password-link">Forgot password</a></div>
+                        <div><a href="{% url 'auth:password_reset' %}" class="forgot-password-link">Forgot password</a></div>
                     </div>
                 </div>
             </div>
