--- a/authapp/templates/authapp/password_done.html
+++ b/authapp/templates/authapp/password_done.html
@@ -5,13 +5,34 @@
             <div class="container">
                 <div class="signup-content">
                     <div class="signup-form">
+
                         {% if request.resolver_match.url_name == 'password_change_done' %}
                             <h1 class="form-title">Change password</h1>
-                            <div>Your password has been successfully changed.</div>
-                            <div class="form-group form-button">
-                                <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
-                            </div>
+                            <p>Your password has been successfully changed.</p>
+
+                        {% elif request.resolver_match.url_name == 'password_reset_done' %}
+
+                            <h1 class="form-title">Reset password</h1>
+                            <p>
+                                We've emailed you instructions for setting your password, if an account exists with the email you entered.
+                                You should receive them shortly.
+                            </p>
+                            <p>
+                                If you don't receive an email, please make sure you've entered the address you registered with,
+		                        and check your spam folder.
+                            </p>
+
+                        {% elif request.resolver_match.url_name == 'password_reset_complete' %}
+
+                            <h1 class="form-title">Reset password</h1>
+                            <p>Your password has been successfully reset. You may go ahead and
+                                <a class="reset-password-link" href="{% url 'auth:login' %}">sign in</a> now.</p>
+
                         {% endif %}
+
+                        <div class="form-group form-button">
+                            <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
+                        </div>
                     </div>
                     <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
