--- a/authapp/templates/authapp/password_reset.html
+++ b/authapp/templates/authapp/password_reset.html
@@ -1,30 +1,24 @@
 {% extends 'authapp/base.html' %}
 {% load static %}
 {% block content %}
-<!-- Change password form -->
+<!-- Reset password form -->
     <section class="signup">
         <div class="container">
             <div class="signup-content">
                 <div class="signup-form">
-                    <h1 class="form-title">Change password</h1>
+                    <h1 class="form-title">Reset password</h1>
 
                     <form method="POST" class="register-form">
                         {% csrf_token %}
-                        {% for field in form %}
                         <div class="form-group">
-                            <label for="{{ field.id_for_label }}"><i id="{{ field.id_for_label }}_icon" class="zmdi"></i></label>
-                            {{ field }}
+                            <label for="id_email"><i id="id_email_icon" class="zmdi"></i></label>
+                            <input name="email" placeholder="Email address" type="email" id="id_email" required="true">
                         </div>
-
-                          {% for error in field.errors %}
-                            <p class="error_message">{{ error }}</p>
-                          {% endfor %}
-                        {% endfor %}
-
                         <div class="form-group form-button">
-                            <input type="submit" name="signup" id="signup" class="form-submit" value="Change password"/>
+                            <input type="submit" name="signup" id="signup" class="form-submit" value="Send reset email"/>
                         </div>
                     </form>
+
                 </div>
                 <div class="signup-image">
                     <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
