--- a/static/css/register.css
+++ b/static/css/register.css
@@ -330,6 +330,10 @@ figure {
     text-decoration: none;
    }
 
+.change-cursor {
+  cursor: not-allowed;
+}
+
 .term-service {
   font-size: 13px;
   color: #222; }
