Add ajax in courses pagination, update loader time, replace save_verify_mail function.

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -216,6 +216,7 @@
 {% block js %}
     <!-- JQuery v1.11.3 -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 
     <!-- Library - Js -->
     <script src="{% static 'libraries/lib.js' %}"></script><!-- Bootstrap JS File v3.3.5 -->
