--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -54,7 +54,7 @@
 				</div>
 				<a href="#">Filter</a>
 			</div>
-			<div class="row">
+			<div id="courses_row" class="row">
 				<div class="col-md-9 col-sm-6 col-xs-6 content-area">
 					{% for lang_course in language_courses %}
 						<article class="type-post">
@@ -95,7 +95,17 @@
 								{% else %}
 									<li class="page-prv"><a class="pagination_a"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>Previous courses</a></li>
 								{% endif %}
-								<li>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</li>
+								{% for i in page_obj.paginator.page_range %}
+									{% if page_obj.number == i %}
+										<li style="font-weight: bold;">
+											<a href="?page={{ i }}">{{ i }}</a>
+										</li>
+									{% else %}
+										<li>
+											<a href="?page={{ i }}">{{ i }}</a>
+										</li>
+									{% endif %}
+								{% endfor %}
 								{% if page_obj.has_next %}
 									<li class="page-next"><a href="?page={{ page_obj.next_page_number }}">Next courses<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></li>
 								{% else %}
