--- a/mainapp/templates/mainapp/includes/pagination.html
+++ b/mainapp/templates/mainapp/includes/pagination.html
@@ -2,25 +2,120 @@
     <nav>
         <ul class="pager">
             {% if page_obj.has_previous %}
-                <li class="page-prv"><a href="?page={{ page_obj.previous_page_number  }}"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>Previous courses</a></li>
+                <li class="page-prv">
+                    <a href="?page={{ page_obj.previous_page_number  }}"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                        {% if request.resolver_match.url_name == 'teachers'%}
+                            Previous teachers
+                        {% else %}
+                            Previous courses
+                        {% endif %}
+                    </a>
+                </li>
             {% else %}
-                <li class="page-prv"><a class="pagination-active"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>Previous courses</a></li>
+                <li class="page-prv">
+                    <a class="pagination-active"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                        {% if request.resolver_match.url_name == 'teachers'%}
+                            Previous teachers
+                        {% else %}
+                            Previous courses
+                        {% endif %}
+                    </a>
+                </li>
             {% endif %}
-            {% for i in page_obj.paginator.page_range %}
-                {% if page_obj.number == i %}
+
+            {% if paginator.page_range|length  > 4 %}
+
+                {% if page_obj.number|add:'-3' > 1 %}
                     <li>
-                        <a class="pagination-active" href="?page={{ i }}">{{ i }}</a>
+                        <a href="?page=1">1</a>
                     </li>
-                {% else %}
                     <li>
-                        <a href="?page={{ i }}">{{ i }}</a>
+                        <a class="pagination-active">...</a>
                     </li>
                 {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-                <li class="page-next"><a href="?page={{ page_obj.next_page_number }}">Next courses<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></li>
+
+                {% for i in paginator.page_range %}
+
+                    {% if page_obj.number == i %}
+
+                        <li>
+                            <a class="pagination-active" href="?page={{ i }}">{{ i }}</a>
+                        </li>
+
+                    {% elif page_obj.number|add:'3' < paginator.num_pages and page_obj.number|add:'-3' > 1 %}
+
+                        {% if i|add:'-1' == page_obj.number or i|add:'1' == page_obj.number %}
+                            <li>
+                                <a href="?page={{ i }}">{{ i }}</a>
+                            </li>
+                        {% endif %}
+
+                    {% else %}
+
+                        {% if page_obj.number|add:'3' >= paginator.num_pages %}
+                            {% if i >= page_obj.number|add:'-1' %}
+                                <li>
+                                    <a href="?page={{ i }}">{{ i }}</a>
+                                </li>
+                            {% endif %}
+
+                        {% else %}
+                            {% if i <= page_obj.number|add:'1' %}
+                                <li>
+                                    <a href="?page={{ i }}">{{ i }}</a>
+                                </li>
+                            {% endif %}
+
+                        {% endif %}
+
+                    {% endif %}
+
+                {% endfor %}
+
+                {% if page_obj.number|add:'3' < paginator.num_pages %}
+                    <li>
+                        <a class="pagination-active">...</a>
+                    </li>
+                    <li>
+                        <a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+                    </li>
+                {% endif %}
             {% else %}
-                <li class="page-next"><a class="pagination-active">Next courses<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></li>
+                {% for i in paginator.page_range %}
+                    {% if page_obj.number == i %}
+                        <li>
+                        <a class="pagination-active" href="?page={{ i }}">{{ i }}</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="?page={{ i }}">{{ i }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+
+            {% if page_obj.has_next %}
+                <li class="page-next">
+                    <a href="?page={{ page_obj.next_page_number }}">
+                        {% if request.resolver_match.url_name == 'teachers'%}
+                            Next teachers
+                        {% else %}
+                            Next courses
+                        {% endif %}
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </a>
+                </li>
+            {% else %}
+                <li class="page-next">
+                    <a class="pagination-active">
+                        {% if request.resolver_match.url_name == 'teachers'%}
+                            Next teachers
+                        {% else %}
+                            Next courses
+                        {% endif %}
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </a>
+                </li>
             {% endif %}
         </ul>
     </nav>
