--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -70,15 +70,16 @@
 						</ul>
 					</div><!-- Social /- -->
 
-                    {% if user.is_authenticated %}
                     <div class="col-md-4 col-sm-4 col-xs-6 register">
-						<a href="{% url 'auth:logout' %}">Logout</a>
-					</div>
-                    {% else %}
-					<div class="col-md-4 col-sm-4 col-xs-6 register">
-						<a href="{% url 'auth:login' %}?next={{ request.path }}">Login</a>
-					</div>
-                    {% endif %}
+
+                        {% if user.is_authenticated %}
+                            <a class="register-link" href="{% url 'auth:logout' %}">Logout</a>
+                        {% else %}
+                            <a class="register-link" href="{% url 'auth:login' %}?next={{ request.path }}">Login</a>
+                        {% endif %}
+
+						<a class="shop-cart" href="{% url 'basket:index' %}"><i class="fa fa-shopping-cart"></i></a>
+                    </div>
 
 					<!-- Logo Block -->
 					<div class="col-md-4 col-sm-4 col-xs-12 logo-block">
