--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -3,7 +3,7 @@
 {% load tags %}
 {% block content %}
 <!-- PageBanner -->
-	<div class="container-fluid page-banner event-grid event-list no-padding">
+	<div class="container-fluid page-banner event-grid event-list no-padding" style="background: url({% static '/images/about-banner.jpg'%});">
 		<div class="section-padding"></div>
 			<div class="container">
 				<div class="banner-content-block">
