--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,7 +166,6 @@ a {
 
 /* ## Page Banner */
 .page-banner {
-	background: url("images/about-banner.jpg"); 
 	-webkit-background-size: cover;
 	background-size: cover;		
 	background-position: center center;
@@ -641,7 +640,6 @@ a {
 	float: right;
 }
 .top-header .register a {
-	background-color: #949a9e;
     border-radius: 30px;
     color: #fff;
     display: inline-block;
@@ -649,7 +647,6 @@ a {
     font-size: 12px;
     letter-spacing: 2.4px;
     line-height: 28px;
-    padding: 5px 41px;
     text-decoration: none;
     text-transform: uppercase;
     transition: all 1s ease 0s;
@@ -660,6 +657,14 @@ a {
 .top-header .register a:hover {
 	background-color: #feca16;
 	color: #000;
+}
+.shop-cart {
+	background-color: #feca16;
+    padding: 5px 21px;
+}
+.register-link {
+	background-color: #949a9e;
+    padding: 5px 41px;
 }
 
 /* - Menu Block */
