Added basket, basket add, basket delete, context processor. Updated templates and js files.

--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -28,7 +28,7 @@
 
     </div>
 {% block js %}
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
 </body>
 </html>
