--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -99,3 +99,6 @@
 		<div class="section-padding"></div>
 	</div><!-- Event List /- -->
 {% endblock %}
+{% block js %}
+    <script src="{% static 'js/main.js' %}"></script>
+{% endblock %}
