--- a/mainapp/templates/mainapp/teacher_single.html
+++ b/mainapp/templates/mainapp/teacher_single.html
@@ -100,3 +100,6 @@
 		<div class="section-padding"></div>
 	</div><!-- Teacher courses /- -->
 {% endblock %}
+{% block js %}
+    <script src="{% static 'js/main.js' %}"></script>
+{% endblock %}
