--- a/mainapp/templates/mainapp/teachers_list.html
+++ b/mainapp/templates/mainapp/teachers_list.html
@@ -87,3 +87,6 @@
     <div class="section-padding"></div>
 	</div>
 {% endblock %}
+{% block js %}
+    <script src="{% static 'js/main.js' %}"></script>
+{% endblock %}
