--- a/mainapp/templates/mainapp/language_course_single.html
+++ b/mainapp/templates/mainapp/language_course_single.html
@@ -63,6 +63,10 @@
 										<span class="icon icon-Pointer"></span>
 										<span>{{current_course.course.address}}</span>
 									</div>
+									<div class="post-location">
+										<span class="glyphicon glyphicon-credit-card"></span>
+										<span>Price: {{current_course.course.price}}&euro;</span>
+									</div>
 								</div>
 							</div>
 							<div class="entry-content">
@@ -70,6 +74,9 @@
 							</div>
 						</div>
 					</article>
+					<div class="buy-course">
+						<div class="buy-cart-btn"><a href="{% url 'basket:add' current_course.course.pk %}">Add in basket</a></div>
+					</div>
 
 					<!-- Map -->
 					<div class="map">
@@ -174,4 +181,7 @@
 		</div>
 		<div class="section-padding"></div>
 	</div><!-- Current courses /- -->
+{% endblock %}
+{% block js %}
+    <script src="{% static 'js/main.js' %}"></script>
 {% endblock %}
